fixed image name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta content="osu!replayViewer - osu replays sharing" property="og:title">
   <meta content="Send your osu replay file and share it with everyone easily" property="og:description">
   <meta content="osu!replayViewer" property="og:site_name">
-  <meta content='https://osureplayviewer.xyz/images/icon.png' property='og:image'>
+  <meta content="https://osureplayviewer.xyz/images/icon.png" property='og:image'>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113523918-1"></script>
