--- a/index_v2.html
+++ b/index_v2.html
@@ -39,6 +39,12 @@
     <h1 id="title"> osu!replayViewer </h1>
 
     <h2 id="slogan"> Share your osu! performance to everyone !</h2>
+
+    <div id="etapes">
+      <img src="images/etape1.png"/>
+      <img src="images/etape2.png"/>
+      <img src="images/etape3.png"/>
+    </div>
     <br>
     <br>
     <br>
