--- a/index_v2.html
+++ b/index_v2.html
@@ -1,3 +1,8 @@
+<?php
+session_start();
+
+?>
+
 <html>
   <head>
     <!-- Discord metadata -->
@@ -15,6 +20,133 @@
   </head>
 
   <body>
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <h2 class="modal_title">Informations about your replay</h2>
+
+        <div id="replay_box">
+          <div>
+            <img src="images/preview.jpg"/>
+          </div>
+
+          <div id="replay_text">
+            <span id="beatmap">Beatmap :
+              <?php
+                echo $_SESSION['beatmapName'];
+              ?>
+            </span>
+
+            <span id="diff">Difficulty :
+              <?php
+                echo $_SESSION['difficulty'];
+              ?>
+            </span>
+            <span id="player">Player :
+              <?php
+                echo $_SESSION['playername'];
+              ?>
+            </span>
+            <span id="mods">Mods :
+              <?php
+                echo $_SESSION['mods'];
+              ?>
+            </span>
+            <span id="time">Duration :
+              <?php
+                echo $_SESSION['duration'].' s';
+              ?>
+            </span>
+          </div>
+        </div>
+
+        <h2 class="modal_title" >Checklist : </h2>
+        <div id="check_list">
+          <div class="modal_item" >
+            <img src="images/index/modal1.png" id="replayS"/>
+            <span class="modal_caption">Replay structure</span>
+          </div>
+
+          <div class="modal_item" >
+            <img src="images/index/modal2.png" id="beatmapA"/>
+            <span class="modal_caption">Beatmap availability</span>
+          </div>
+
+          <div class="modal_item" >
+            <img src="images/index/modal3.png" id="playerA"/>
+            <span class="modal_caption">Player osu account</span>
+          </div>
+
+          <div class="modal_item" >
+            <img src="images/index/modal4.png" id="replayD"/>
+            <span class="modal_caption">Replay duration</span>
+          </div>
+
+          <div class="modal_item" >
+            <img src="images/index/modal5.png" id="replayDup"/>
+            <span class="modal_caption">Replay is not a duplicate</span>
+          </div>
+
+          <div class="modal_item" >
+            <img src="images/index/modal6.png" id="replayW"/>
+            <span class="modal_caption">Replay is not in <br>waiting list</span>
+          </div>
+
+        </div>
+
+        <div id="replay_start">
+          <form class="align_center">
+            <input id="checkBox" type="checkbox" name="checkbox"> <span> do not delete my replay after 30 days</span><br>
+            <input type="submit" value="Start processing" id="start_processing">
+          </form>
+
+          <button onclick="closeModal()">Cancel</button>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Activate modal view when session is full -->
+    <?php
+      if(isset($_SESSION['replayStructure'])){
+        echo '<script type="text/javascript">',
+             'openModal();',
+             '</script>';
+
+        $string = '';
+        if(!$_SESSION['replayStructure']){$string .= "setItemFalse('replayS'); ";}
+        if(!$_SESSION['beatmapAvailable']){$string .= "setItemFalse('beatmapA'); ";}
+        if(!$_SESSION['playerOsuAccount']){$string .= "setItemFalse('playerA'); ";}
+        if(!$_SESSION['replayBelow10']){$string .= "setItemFalse('replayD'); ";}
+        if(!$_SESSION['replayNotDuplicate']){$string .= "setItemFalse('replayDup'); ";}
+        if(!$_SESSION['replayNotWaiting']){$string .= "setItemFalse('replayW'); ";}
+
+        echo "<script type=\"text/javascript\">".$string."</script>";
+
+        if(!$_SESSION['replayStructure'] || !$_SESSION['beatmapAvailable'] || !$_SESSION['playerOsuAccount'] || !$_SESSION['replayBelow10'] || !$_SESSION['replayNotDuplicate'] || !$_SESSION['replayNotWaiting']){
+          echo '<script type="text/javascript">',
+               'disableProcessing();',
+               '</script>';
+        }
+
+        //unset session
+        unset($_SESSION['file_name']);
+        unset($_SESSION['replayStructure']);
+        unset($_SESSION['beatmapAvailable']);
+        unset($_SESSION['playerOsuAccount']);
+        unset($_SESSION['replayBelow10']);
+        unset($_SESSION['replayNotDuplicate']);
+        unset($_SESSION['replayNotWaiting']);
+        unset($_SESSION['beatmapName']);
+        unset($_SESSION['difficulty']);
+        unset($_SESSION['playername']);
+        unset($_SESSION['duration']);
+        unset($_SESSION['mods']);
+      }
+    ?>
+
     <!-- Top navigation bar -->
     <div class="top-nav">
       <div class="floatleft">
@@ -66,120 +198,10 @@
     <h2 id="upload_title">Select your osu replay to upload (.osr)</h2>
     <h2 id="upload_subtitle">Drag and drop or open the explorer</h2>
 
-    <form action="upload.php" method="post" enctype="multipart/form-data" id="upload_box" class="align_center">
-        <input type="file" name="fileToUpload" id="fileToUpload" oninput="onChange()">
+    <form action="php/index/replayFileVerf.php" method="post" enctype="multipart/form-data" id="upload_box" class="align_center">
+        <input type="file" name="fileToUpload" id="fileToUpload" oninput="submitForm()">
     </form>
 
-    <!-- Modal -->
-    <div id="myModal" class="modal">
-
-      <!-- Modal content -->
-      <div class="modal-content">
-        <h2 class="modal_title">Informations about your replay</h2>
-
-        <div id="replay_box">
-          <div>
-            <img src="images/preview.jpg"/>
-          </div>
-
-          <div id="replay_text">
-            <span id="beatmap">Beatmap : </span> <br>
-            <span id="diff">Difficulty : </span>
-            <span id="player">Player : </span>
-            <span id="mods">Mods : </span>
-            <span id="time">Duration : </span>
-          </div>
-        </div>
-
-        <h2 class="modal_title" >Checklist : </h2>
-        <div id="check_list">
-          <div class="modal_item" id="replayS">
-            <img src="images/index/modal1.png"/>
-            <span class="modal_caption">Replay structure</span>
-          </div>
-
-          <div class="modal_item" id="beatmapA">
-            <img src="images/index/modal2.png"/>
-            <span class="modal_caption">Beatmap availability</span>
-          </div>
-
-          <div class="modal_item" id="playerA">
-            <img src="images/index/modal3.png"/>
-            <span class="modal_caption">Player osu account</span>
-          </div>
-
-          <div class="modal_item" id="replayD">
-            <img src="images/index/modal4.png"/>
-            <span class="modal_caption">Replay duration</span>
-          </div>
-
-          <div class="modal_item" id="replayDup">
-            <img src="images/index/modal5.png"/>
-            <span class="modal_caption">Replay is not a duplicate</span>
-          </div>
-
-          <div class="modal_item" id="replayW">
-            <img src="images/index/modal6.png"/>
-            <span class="modal_caption">Replay is not in <br>waiting list</span>
-          </div>
-
-        </div>
-
-        <div id="replay_start">
-          <form class="align_center">
-            <input id="checkBox" type="checkbox" name="checkbox"> <span> do not delete my replay after 30 days</span><br>
-            <input type="submit" value="Start processing">
-          </form>
-
-          <button onclick="closeModal()">Cancel</button>
-        </div>
-      </div>
-
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
   </body>
 
 </html>
