--- a/index_v2.html
+++ b/index_v2.html
@@ -15,7 +15,7 @@ session_start();
     <link rel="stylesheet" type="text/css" href="css/index_v2.css">
     <link rel="icon" type="image/png" href="images/icon.png" />
     <script type="text/javascript" src="js/index/upload.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
@@ -29,7 +29,14 @@ session_start();
 
         <div id="replay_box">
           <div>
-            <img src="images/preview.jpg"/>
+            <?php
+              if(isset($_SESSION['beatmapSetId'])){
+                $url = "https://b.ppy.sh/thumb/".$_SESSION['beatmapSetId']."l.jpg";
+                echo "<img src='".$url."'/>";
+              }else{
+                echo '<img src="images/preview.jpg"/>';
+              }
+            ?>
           </div>
 
           <div id="replay_text">
@@ -97,12 +104,14 @@ session_start();
         </div>
 
         <div id="replay_start">
-          <form class="align_center">
+          <form class="align_center" method="post" enctype="multipart/form-data" action="php/index/upload.php">
             <input id="checkBox" type="checkbox" name="checkbox"> <span> do not delete my replay after 30 days</span><br>
-            <input type="submit" value="Start processing" id="start_processing">
+            <input id="filename" name="filename" type="hidden" value=<?php echo '"'.$_SESSION['filename'].'"' ?>>
+            <input id="duration" name="duration" type="hidden" value=<?php echo '"'.$_SESSION['duration'].'"' ?>>
+            <input type="submit" value="Start processing" id="start_processing" onclick="clearSession()">
           </form>
 
-          <button onclick="closeModal()">Cancel</button>
+          <button onclick="closeModal(); clearSession();">Cancel</button>
         </div>
       </div>
 
@@ -130,20 +139,6 @@ session_start();
                'disableProcessing();',
                '</script>';
         }
-
-        //unset session
-        unset($_SESSION['file_name']);
-        unset($_SESSION['replayStructure']);
-        unset($_SESSION['beatmapAvailable']);
-        unset($_SESSION['playerOsuAccount']);
-        unset($_SESSION['replayBelow10']);
-        unset($_SESSION['replayNotDuplicate']);
-        unset($_SESSION['replayNotWaiting']);
-        unset($_SESSION['beatmapName']);
-        unset($_SESSION['difficulty']);
-        unset($_SESSION['playername']);
-        unset($_SESSION['duration']);
-        unset($_SESSION['mods']);
       }
     ?>
 
