Almost finished new index page

--- a/index_v2.html
+++ b/index_v2.html
@@ -185,17 +185,38 @@ session_start();
       </div>
     </div>
 
-    <form action="#upload_title" class="align_center">
+    <form action="#upload_section" class="align_center">
       <input type="submit" value="Begin !" class="button" />
     </form>
 
     <!-- Upload -->
+    <section id="upload_section"> </section>
+
     <h2 id="upload_title">Select your osu replay to upload (.osr)</h2>
     <h2 id="upload_subtitle">Drag and drop or open the explorer</h2>
 
     <form action="php/index/replayFileVerf.php" method="post" enctype="multipart/form-data" id="upload_box" class="align_center">
         <input type="file" name="fileToUpload" id="fileToUpload" oninput="submitForm()">
     </form>
+
+    <footer>
+      <h3 class="align_center">osu!replayViewer is not affiliated with osu! - All credit to Dean Herbert<h3>
+      <div class="footer_img">
+        <a href="https://discord.gg/pqvhvxx" title="join us on discord!" target="_blank">
+          <img src="images/index/discord_logo.png"/>
+        </a>
+        <a href="https://osu.ppy.sh/community/forums/topics/697883" target="_blank">
+          <img src="images/index/osu forums.png"/>
+        </a>
+        <a href="https://github.com/codevirtuel/osu-replayViewer-web" target="_blank">
+          <img src="images/index/github_logo.png"/>
+        </a>
+      </div>
+
+      <div id="created">
+        <span> website created by codevirtuel <a href="https://osu.ppy.sh/u/3481725" target="_blank"><img src="images/codevirtuel.jpg"/></a></span>
+      </div>
+    </footer>
 
   </body>
 
