Finished new search page design

--- a/index_v2.html
+++ b/index_v2.html
@@ -7,13 +7,14 @@ session_start();
   <head>
     <!-- Discord metadata -->
     <meta content="osu!replayViewer - osu replays sharing" property="og:title">
-    <meta content="Send your osu replay file and share with everyone easily" property="og:description">
+    <meta content="Share your osu! performance to everyone !" property="og:description">
     <meta content="osu!replayViewer" property="og:site_name">
     <meta content="http://osureplayviewer.xyz/images/icon.png" property='og:image'>
 
     <title>osu!replayViewer - A online osu replay viewer</title>
     <link rel="stylesheet" type="text/css" href="css/index_v2.css">
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
     <link rel="icon" type="image/png" href="images/icon.png" />
     <script type="text/javascript" src="js/index/upload.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
