beautify the profile page

--- a/view.html
+++ b/view.html
@@ -37,7 +37,7 @@
     <meta content="osu!replayViewer" property="og:site_name">
     <meta content="http://osureplayviewer.xyz/images/icon.png" property='og:image'>
 
-    <title>osu!replayViewer - View replay</title>
+    <title>osu!replayViewer - View <?php echo $userJSON[0]['username']; ?> replay</title>
     <link rel="icon" type="image/png" href="images/icon.png" />
 
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
@@ -58,7 +58,7 @@
           <i class="material-icons">question_answer</i> FAQ</a>
       </div>
 
-      <a href="#" id="logo">
+      <a href="index.html" id="logo">
         <img src="images/icon.png" />
       </a>
 
