--- a/progress.html
+++ b/progress.html
@@ -1,12 +1,40 @@
 <?php
   include 'php/progress/functions.php';
+
+  //Refresh every 30s
+  header('Refresh: 30');
+
+  $replayDATA = getRequestArray($_GET['id']);
+
+
+  //Get beatmap name
+  $beatmapName = base64_decode($replayDATA['BFN']);
+  $beatmapName = str_replace(".osz", "", $beatmapName);
+  $tab = explode(" ",$beatmapName);
+  unset($tab[0]);
+  $beatmapName = implode(" ",$tab);
+
+  //Beatmap image
+  $btUrl = "https://b.ppy.sh/thumb/".$replayDATA['beatmapSetId']."l.jpg";
+
+  $date = new DateTime($replayDATA['date']);
+
+  //User profile img
+  $userImgURL = "https://a.ppy.sh/".$replayDATA['playerId'];
+
+  //calculations of the width
+  if($replayDATA['currentStatut'] != 4){
+    $barWidth = 20*($replayDATA['currentStatut']+1);
+  }else{
+    $barWidth = 99;
+  }
 ?>
 
 <!DOCTYPE html>
 <html>
 
   <head>
-    <title>osu!replayViewer - </title>
+    <title>osu!replayViewer - <?php echo $barWidth.'%' ?></title>
 
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
@@ -20,6 +48,39 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- Cookie bar -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?theme=flying&tracking=1&always=1&scrolling=1"></script>
+
+    <!-- Timer -->
+    <script>
+      // Set the date we're counting down to
+      var countDownDate = new Date(<?php echo "'".date_format($date, 'Y-m-d H:i:s')."'";?>).getTime();
+
+      // Update the count down every 1 second
+      var x = setInterval(function() {
+
+        // Get todays date and time
+        var now = new Date().getTime();
+
+        // Find the distance between now an the count down date
+        var distance = now - countDownDate;
+
+        // Time calculations for days, hours, minutes and seconds
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        // Display the result in the element with id="demo"
+        document.getElementById("timer").innerHTML = days + "d " + hours + "h "
+        + minutes + "m " + seconds + "s ";
+
+        // If the count down is finished, write some text
+        if (distance < 0) {
+          clearInterval(x);
+          document.getElementById("timer").innerHTML = "EXPIRED";
+        }
+      }, 1000);
+    </script>
+
   </head>
 
   <body>
@@ -49,27 +110,31 @@
     <h1 id="title">View progress page</h1>
 
     <div id="beatmap_section">
-      <img src="images/preview.jpg" id="beatmapImg"/>
+      <img src=<?php echo $btUrl; ?> id="beatmapImg"/>
+      <img src=<?php echo $userImgURL; ?> id="playerImg"/>
       <div id="text_section">
-        <h2>This is a beatmap name</h2>
-        <span>Player :</span>
-        <span>Mods :</span>
+        <h2><?php echo $beatmapName; ?></h2>
+        <span id="duration">Duration : <?php
+          $mins = floor($replayDATA['duration'] / 60 % 60);
+          $secs = floor($replayDATA['duration'] % 60);
+          echo $mins.'min '.$secs;
+          ?>
+        </span>
+        <span id="span_timer">This replay has been waiting :</span>
+        <p id="timer"></p>
       </div>
+
     </div>
 
     <div id="progressBar_section">
       <div id="underline"></div>
-      <div id="line"></div>
-      <span>100%</span>
+      <div id="line" style=<?php echo "width:$barWidth%";?> ></div>
+      <span><?php echo $barWidth; ?>%</span>
     </div>
 
     <div id="list_section">
       <h3>State list</h3>
-      <div><img src="images/progress/green.png"> <span>Waiting his turn<span><br></div>
-      <div><img src="images/progress/orange.png"> <span>Setting up recorder<span><br></div>
-      <div><img src="images/progress/red.png"> <span>Recording<span><br></div>
-      <div><img src="images/progress/red.png"> <span>Encoding<span><br></div>
-      <div><img src="images/progress/red.png"> <span>Uploading to the website<span><br></div>
+      <?php drawStates($replayDATA['currentStatut'],getClassement($_GET['id'])) ?>
     </div>
     <br>
     <br>
