--- a/view.html
+++ b/view.html
@@ -1,4 +1,5 @@
 <?php
+  session_start();
   require 'php/view/functions.php';
   require 'php/osuApiFunctions.php';
   require 'secure/osu_api_key.php';
@@ -67,12 +68,24 @@
         <img src="images/icon.png" />
       </a>
 
-      <div class="floatright">
-        <a href="#news" class="nav-link">
-          <i class="material-icons">how_to_reg</i> Register</a>
-        <a href="#news" class="nav-link">
-          <i class="material-icons">vpn_key</i> Login</a>
-      </div>
+      <?php
+        if(isset($_SESSION['userId']) && isset($_SESSION['username'])){
+          $userUrl = "userProfile.php?id=".$_SESSION['userId'];
+          echo '<div class="floatright">';
+          echo  "<a href=$userUrl class=\"nav-link\">";
+          echo    '<i class="material-icons">how_to_reg</i> Profile</a>';
+          echo  '<a href="logout.php" class="nav-link">';
+          echo    '<i class="material-icons">vpn_key</i> Logout</a>';
+          echo '</div>';
+        }else{
+          echo '<div class="floatright">';
+          echo  '<a href="register.php" class="nav-link">';
+          echo    '<i class="material-icons">how_to_reg</i> Register</a>';
+          echo  '<a href="login.php" class="nav-link">';
+          echo    '<i class="material-icons">vpn_key</i> Login</a>';
+          echo '</div>';
+        }
+      ?>
     </div>
 
     <!-- Video -->
