--- a/progress.html
+++ b/progress.html
@@ -92,20 +92,32 @@
       <div class="floatleft">
         <a href="search.php" class="nav-link">
           <i class="material-icons">search</i> Search</a>
-        <a href="#news" class="nav-link">
+        <a href="faq.html" class="nav-link">
           <i class="material-icons">question_answer</i> FAQ</a>
       </div>
 
-      <a href="index.html" id="logo">
+      <a href="#" id="logo">
         <img src="images/icon.png" />
       </a>
 
-      <div class="floatright">
-        <a href="#news" class="nav-link">
-          <i class="material-icons">how_to_reg</i> Register</a>
-        <a href="#news" class="nav-link">
-          <i class="material-icons">vpn_key</i> Login</a>
-      </div>
+      <?php
+        if(isset($_SESSION['userId']) && isset($_SESSION['username'])){
+          $userUrl = "userProfile.php?id=".$_SESSION['userId'];
+          echo '<div class="floatright">';
+          echo  "<a href=$userUrl class=\"nav-link\">";
+          echo    '<i class="material-icons">how_to_reg</i> Profile</a>';
+          echo  '<a href="logout.php" class="nav-link">';
+          echo    '<i class="material-icons">vpn_key</i> Logout</a>';
+          echo '</div>';
+        }else{
+          echo '<div class="floatright">';
+          echo  '<a href="register.php" class="nav-link">';
+          echo    '<i class="material-icons">how_to_reg</i> Register</a>';
+          echo  '<a href="login.php" class="nav-link">';
+          echo    '<i class="material-icons">vpn_key</i> Login</a>';
+          echo '</div>';
+        }
+      ?>
     </div>
 
     <!-- Real content -->
