--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ session_start();
       <div class="floatleft">
         <a href="search.php" class="nav-link">
           <i class="material-icons">search</i> Search</a>
-        <a href="#news" class="nav-link">
+        <a href="faq.html" class="nav-link">
           <i class="material-icons">question_answer</i> FAQ</a>
       </div>
 
