Added faq content

--- a/faq.html
+++ b/faq.html
@@ -55,6 +55,72 @@
       ?>
     </div>
 
+    <h1 id="title">FAQ</h1>
+
+    <div class="question">
+      <h2 class="question_title">How long does it usually take until a Replay is uploaded?</h2>
+
+      <span class="question_text">
+        It all depends on several factors:<br>
+        - the number of replays before your turn.<br>
+        - their duration (maximum 10min).<br>
+        - time to download the beatmap and skin (if configured).<br>
+
+        During your tour, expect to wait about 15 minutes.
+      </span>
+    </div>
+
+    <div class="question">
+      <h2 class="question_title">How do I upload my skin on my replays ?</h2>
+
+      <span class="question_text">
+        1. Login to your account.<br>
+        2. Go to your profile and find the "edit profile" button.<br>
+        3. In the "Custom skin uploader" select your .osk file and click "Upload skin".<br>
+        4. Your skin should be uploaded.
+      </span>
+    </div>
+
+    <div class="question">
+      <h2 class="question_title">How do I change my skin on my replays ?</h2>
+
+      <span class="question_text">
+        First read this(up question) to upload your skin.<br>
+        1. Login to your account.<br>
+        2. Go to your profile and find the "edit profile" button.<br>
+        3. In the "custom skin and dim chooser" check the "Enable custom skin" checkbox.<br>
+        4. Choose your custom skin in the list below.<br>
+        5. Click on "Save all modifications".
+      </span>
+    </div>
+
+    <div class="question">
+      <h2 class="question_title">How do I change the background dim of my replays ?</h2>
+
+      <span class="question_text">
+        1. Login to your account.<br>
+        2. Go to your profile and find the "edit profile" button.<br>
+        3. Go in the "custom skin and dim chooser".<br>
+        4. Here you can choose the dim and view a preview below.<br>
+        5. Click on "Save all modifications".
+      </span>
+    </div>
+
+    <div class="question">
+      <h2 class="question_title">Why do I have to confirm that I'm the owner of this osu! account during registering ?</h2>
+
+      <span class="question_text">
+        To prevent your nickname from being stolen and your replays from being modified by someone else.
+      </span>
+    </div>
+
+    <h3 class="mail">If your question is not in this page, please ask with this email : <a href="mailto:contact@osureplayviewer.xyz">contact@osureplayviewer.xyz</a></h3>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
     <footer>
       <h3 class="align_center">osu!replayViewer is not affiliated with osu! - All credit to Dean Herbert</h3>
       <div class="footer_img">
