--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ session_start();
 <html>
   <head>
     <!-- Discord metadata -->
-    <meta content="osu!replayViewer - osu replays sharing" property="og:title">
+    <meta content="osu!replayViewer - osu! replays sharing" property="og:title">
     <meta content="Share your osu! performance to everyone !" property="og:description">
     <meta content="osu!replayViewer" property="og:site_name">
     <meta content="http://osureplayviewer.xyz/images/icon.png" property='og:image'>
