--- a/view.html
+++ b/view.html
@@ -16,8 +16,10 @@
   $urlRaw = "/replayList/".$_GET['id']."/".$_GET['id'].".mp4";
   if(file_exists($urlRaw)){
     $showRaw = true;
+    $videoURL = $urlRaw;
   }else{
     $showRaw = false;
+    $videoURL = "http://www.youtube.com/v/".generateYoutubeLink($replayDATA['youtubeId']);
   }
 
   $osrUrl = "/replayList/".$_GET['id']."/".rawurlencode($replayDATA['OFN']);
@@ -33,10 +35,10 @@
 
   <head>
     <!-- Discord metadata -->
-    <meta content="osu!replayViewer - osu replays sharing" property="og:title">
-    <meta content="Share your osu! performance to everyone !" property="og:description">
+    <meta content="osu!replayViewer - osu! replays sharing" property="og:title">
+    <meta content=<?php echo '"'."View ".$userJSON[0]['username']." replay".'"'; ?> property="og:description">
     <meta content="osu!replayViewer" property="og:site_name">
-    <meta content="http://osureplayviewer.xyz/images/icon.png" property='og:image'>
+    <meta property="og:video" content=<?php echo '"'.$videoURL.'"'; ?>>
 
     <title>osu!replayViewer - View <?php echo $userJSON[0]['username']; ?> replay</title>
     <link rel="icon" type="image/png" href="images/icon.png" />
