--- a/progress.html
+++ b/progress.html
@@ -78,7 +78,7 @@
         // If the count down is finished, write some text
         if (distance < 0) {
           clearInterval(x);
-          document.getElementById("timer").innerHTML = "EXPIRED";
+          document.getElementById("timer").innerHTML = "less that 1sec";
         }
       }, 1000);
     </script>
@@ -96,7 +96,7 @@
           <i class="material-icons">question_answer</i> FAQ</a>
       </div>
 
-      <a href="#" id="logo">
+      <a href="index.html" id="logo">
         <img src="images/icon.png" />
       </a>
 
