Added discord metadata

--- a/view.html
+++ b/view.html
@@ -38,6 +38,7 @@
     <meta content="osu!replayViewer - osu! replays sharing" property="og:title">
     <meta content=<?php echo '"'."View ".$userJSON[0]['username']." replay".'"'; ?> property="og:description">
     <meta content="osu!replayViewer" property="og:site_name">
+    <meta content="http://osureplayviewer.xyz/images/icon.png" property='og:image'>
     <meta property="og:video" content=<?php echo '"'.$videoURL.'"'; ?>>
 
     <title>osu!replayViewer - View <?php echo $userJSON[0]['username']; ?> replay</title>
