--- a/view.html
+++ b/view.html
@@ -28,6 +28,17 @@
   }else{
     $showOsr = false;
   }
+
+  $BFN = base64_decode($replayDATA['BFN']);
+  $BFN = str_replace(".osz",'', $BFN);
+  $BFN = str_replace($replayDATA['beatmapSetId'],'', $BFN);
+
+  $twitterText = 'Come and see my osu! performace on '.$BFN.' - http://osureplayviewer.xyz/view.html?id='.$_GET['id'];
+  $twitterURL = '"'."https://twitter.com/intent/tweet?text=".$twitterText.'"';
+
+  $facebookURL = '"'."https://www.facebook.com/plugins/share_button.php?href=".urlencode('http://osureplayviewer.xyz/view.html?id='.$_GET['id'])."&layout=button&size=large&mobile_iframe=true&width=91&height=28&appId".'"';
+
+  $redditURL = '"'."http://www.reddit.com/submit?url=".urlencode('http://osureplayviewer.xyz/view.html?id='.$_GET['id']).'"';
 ?>
 
 <!DOCTYPE html>
@@ -92,12 +103,7 @@
     </div>
 
     <!-- Video -->
-    <h1 id="title"><?php
-      $BFN = base64_decode($replayDATA['BFN']);
-      $BFN = str_replace(".osz",'', $BFN);
-      $BFN = str_replace($replayDATA['beatmapSetId'],'', $BFN);
-      echo $BFN;
-    ?></h1>
+    <h1 id="title"><?php echo $BFN;?></h1>
     <h1 id="subtitle"><?php echo $userJSON[0]['username']; ?></h1>
 
     <div class="first_block">
@@ -139,6 +145,21 @@
           ?>
           <!-- <a href="#"><img src="images/view/download_skin.png"/> -->
         </div>
+      </div>
+    </div>
+
+    <div class="second_block">
+      <span id="section_title">Share</span>
+      <div id="share_section">
+        <a class="twitter-share-button"
+        href=<?php echo $twitterURL; ?>>
+        <img src="images/twitter_icon.png"/></a>
+
+        <a class="reddit-share-button"
+        href=<?php echo $redditURL; ?>>
+        <img src="images/reddit_icon.png"/></a>
+
+        <iframe src=<?php echo $facebookURL; ?> width="91" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
       </div>
     </div>
 
