--- a/view.html
+++ b/view.html
@@ -151,11 +151,11 @@
     <div class="second_block">
       <span id="section_title">Share</span>
       <div id="share_section">
-        <a class="twitter-share-button"
+        <a class="twitter-share-button" target="_blank"
         href=<?php echo $twitterURL; ?>>
         <img src="images/twitter_icon.png"/></a>
 
-        <a class="reddit-share-button"
+        <a class="reddit-share-button" target="_blank"
         href=<?php echo $redditURL; ?>>
         <img src="images/reddit_icon.png"/></a>
 
